# Maximizer-App

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
data/: distric_races_by_county.csv
data/cb_2023_us_sldu_500k/: cb_2023_us_sldu_500k.shp.iso.xml
server/: .gitignore  Procfile  constants.py  db.py  elections.csv  file_production.py  server.py
server/static/: detail.css  styles.css
server/static/data/: 2024.house.VoterPower.geojson  distric_races_by_county.csv  fakedata.csv  gsheet_import.py
server/static/data/calculated_files/csvs/: aggregate.csv  ballot_initiative.csv  candidates.csv  congress_house.csv  congress_house_with_geoidfq.csv  democracy.csv  elections.csv  governor.csv  senate.csv  (+3 more)
server/static/data/cb_2023_us_sldl_500k/: cb_2023_us_sldl_500k.shp.ea.iso.xml
server/static/data/cb_2023_us_sldu_500k/: cb_2023_us_sldu_500k.shp.ea.iso.xml
server/static/data/csv_imports/: State_Legislature_Lower.csv  att_general.csv  ballot_initiative.csv  candidates.csv  congress_house.csv  governor.csv  judicial.csv  president.csv  sec_state.csv  senate.csv  state_lower_legislature.csv  state_upper_legislature.csv
server/static/js/: ballot_initiative.js  ballots.js  colors.js  getinvolved.css  stateData.js  voter_empowerment.js
server/templates/: about.html  detail.html  faq.html  feedback.html  getinvolved.html  home.html  index_trial.html  layout.html  performance.html  vp.html
sitespeed-result/votemaximizer.org/2024-10-09-11-22-54/: assets.html  detailed.html  domains.html  help.html  index.html  pages.html  settings.html  toplist.html
(+18 files in other folders)
